添加order参数，使用任务Id进行查询
