# docs/swagger.json
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "$ref": "#/definitions/bean.Resp"
+                            "type": "integer"
                         }
                     }
                 }
@@ -241,22 +241,25 @@
         "bean.EventListRo": {
             "type": "object",
             "required": [
-                "contract",
                 "event",
-                "pageRo"
+                "pageRo",
+                "taskId"
             ],
             "properties": {
                 "blockRo": {
                     "$ref": "#/definitions/bean.BlockRo"
                 },
-                "contract": {
-                    "type": "string"
-                },
                 "event": {
                     "type": "string"
                 },
+                "orderRo": {
+                    "$ref": "#/definitions/bean.OrderRo"
+                },
                 "pageRo": {
                     "$ref": "#/definitions/bean.PageRo"
+                },
+                "taskId": {
+                    "type": "integer"
                 },
                 "timeRo": {
                     "$ref": "#/definitions/bean.TimeRo"
@@ -269,6 +272,21 @@
                     "items": {
                         "$ref": "#/definitions/bean.Where"
                     }
+                }
+            }
+        },
+        "bean.OrderRo": {
+            "type": "object",
+            "properties": {
+                "feilds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "orderType": {
+                    "description": "ASC/DESC",
+                    "type": "string"
                 }
             }
         },
